--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                         Projects
                     </a>
                 </li>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links">
+                        Connect
+                    </a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="/" class="button">
+                        Sign Up
+                    </a>
+                </li>
+
             </ul>
         </div>
     </nav>
